# gozar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.gorz-api  Dockerfile.gorz-web  Dockerfile.node  Dockerfile.profile-api  Dockerfile.rust  Makefile  PRIVACY.md  README.md  SECURITY.md  docker-compose.gorz.yml  docker-compose.profile.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: android-emulator-smoke.yml  android-phase2-ci.yml  android.yml  ci.yml  dependency-audit.yml  detection-and-ai.yml  gorz-ci.yml  homebrew-formula.yml  kubernetes.yml  production-readiness.yml  profile-ci.yml  release-candidate.yml  terraform.yml
ai/incident-summary/: README.md  incident_summary.py  prompt_template.md
android/gorz/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
deploy/kubernetes/: README.md  gorz-api-deployment.yaml  gorz-api-service.yaml  grafana-dashboard-configmap.yaml  kustomization.yaml  llm-incident-summary-job.yaml  namespace.yaml  networkpolicy.yaml  observability-configmap.yaml  profile-api-deployment.yaml  profile-api-service.yaml  prometheus-rules.yaml  siem-detection-rules-configmap.yaml
deploy/private-access/: .env.example  bootstrap.sh  compose.yml  export-ca.sh
deploy/production/: README.md
docs/: architecture.md  evaluation.md  local-run.md  path-scoring.md  relay-directory.md  research-alignment.md  research-gateway.md  safety-boundaries.md  store-forward.md  threat-model.md
docs/adr/: 0001-polyglot-monorepo.md  0002-quic-first-multipath.md  0003-authenticated-control-messages.md  0004-production-readiness-gates.md
docs/ai/: llm-incident-summaries.md
docs/backend/: android-phase-4-backend-contract.md  backend-alpha-hardening.md  rate-limiting-design.md
docs/ci/: README.md  workflow-status.md
docs/demo/: README.md  demo-video-checklist.md  demo-video-link.md  demo-video-recording-commands.md  demo-video-script.md  demo-video-shot-list.md  demo-video-subtitles.srt  gozar-gorz-phase4-demo.placeholder.md  reviewer-walkthrough.md
docs/developer/: local-dev-matrix.md
docs/diagrams/: architecture.mmd
docs/gorz/: api-contract.md  architecture.md  confidence-model.md  demo-script.md  homebrew-install.md  incident-record-schema.md  local-run.md  (+7 more)
eval/: README.md
observability/: README.md
python/gorz_api/: README.md  pyproject.toml
python/gorz_api/gorz_api/: __init__.py  audit.py  confidence.py  config.py  crypto_demo.py  demo_seed.py  diagnostics.py  incidents.py  main.py  models.py  openapi_tags.py  safety.py  schemas.py  storage.py
python/gorz_api/tests/: conftest.py  test_api.py  test_confidence.py  test_incidents.py  test_redaction.py  test_storage.py
rust/crates/gozar-core/: Cargo.toml
rust/crates/gozar-core/src/: control.rs  flow.rs  lib.rs  mesh.rs  overlay.rs  quic.rs  runtime_config.rs  scoring.rs  store_forward.rs  telemetry.rs
rust/services/desktop-client/: Cargo.toml
rust/services/desktop-client/src/: main.rs
scripts/: check_android_manifest_permissions.py  check_android_route_safety.py  check_backend_safety.py  check_phase3_safety.py  check_safety_wording.py  local_health_report.py  production_readiness_check.py
tests/: gorz_cli_test.sh  test_prepare_homebrew_release.py
(+389 files in other folders)
