[workspace]
members = [
  "rust/crates/gozar-core",
  "rust/services/desktop-client",
  "rust/services/relay",
  "rust/services/gateway",
  "rust/services/echo-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
hmac = "0.12"
opentelemetry = "0.24"
opentelemetry-stdout = { version = "0.5", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["trace"] }
quinn = "0.11"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

