[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gorz-api"
version = "0.1.0"
description = "Local-first Python backend for the Gorz messaging prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "PyNaCl>=1.5,<2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gorz_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"gorz_api/main.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_configs = true
ignore_missing_imports = true
