[package]
name = "gozar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
hmac.workspace = true
opentelemetry.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
quinn.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

