[package]
name = "desktop-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
gozar-core = { path = "../../crates/gozar-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true